@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<map version="1.0" tiledversion="1.0.2" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" backgroundcolor="#0000ff" nextobjectid="3">
+<map version="1.0" tiledversion="1.0.2" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" backgroundcolor="#0000ff" nextobjectid="5">
  <properties>
   <property name="testMapProperty" value="SUCCESS"/>
  </properties>
@@ -27,6 +27,12 @@
    <properties>
     <property name="testProperty" value="SUCCESS"/>
    </properties>
+  </object>
+  <object id="3" template="object.tx" x="240" y="168"/>
+  <object id="4" template="object.tx" x="320" y="168">
+    <properties>
+     <property name="testProperty" value="FAILED"/>
+    </properties>
   </object>
  </objectgroup>
  <layer name="Higher" width="10" height="8">
