@@ -9,6 +9,7 @@
 - Added Viewport implementations (Extend, Fill, Fit, Screen and Stretch)
 - Added MonospaceFont, MonospaceFontCache and FontGlyphLayout for simplified font rendering
 - Added method to show/hide ScrollBox scroll track
+- Added support for Tiled object templates
 - Improved Graphics performance by reducing spritebatch flushes
 - Tilesets can now be loaded from TextureAtlas instances
 - UiContainer can now have multiple navigation action keys
